# restaurants_finder

./: LICENSE  README.md  pyproject.toml
wolt/: scrapy.cfg
wolt/wolt/: items.py  middlewares.py  pipelines.py  settings.py
