[tool.poetry]
name = "restaurants-finder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "restaurants_finder"}]

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
